--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -130,6 +130,7 @@
     <!-- Question activity strings -->
     <string name="title_activity_question">问题</string>
     <string name="action_focus">关注</string>
+    <string name="action_contact">私信</string>
     <string name="action_not_focus">不再关注</string>
     <string name="action_answer">添加回答</string>
     <string name="action_share">分享到</string>
