--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,6 +138,7 @@
     <!-- Question activity strings -->
     <string name="title_activity_question">Question</string>
     <string name="action_focus">Focus</string>
+    <string name="action_contact">Contact</string>
     <string name="action_not_focus">Not focus</string>
     <string name="action_answer">Add Answer</string>
     <string name="action_share">Share</string>
