1.增加引导页 2.修改欢迎页 3.修复分享BUG

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,6 +202,8 @@
     <!-- Welcome activity -->
     <string name="title_activity_welcome">Welcome</string>
 
+    <string name="title_activity_intro">Intro</string>
+
     <!-- Update dialog strings -->
     <string name="update_message">Find new version</string>
     <string name="update">Update</string>
