--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -191,6 +191,8 @@
     <!-- Welcome activity -->
     <string name="title_activity_welcome">欢迎</string>
 
+    <string name="title_activity_intro">介绍</string>
+
     <!-- Update dialog strings -->
     <string name="update_message">发现新版本</string>
     <string name="update">立即更新</string>
