修改了api,修复我关注的话题，修复话题详情中 用户头像名称显示问题，修复Ta关注的人及关注Ta的人无法显示的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -166,6 +166,7 @@
     <string name="profile_answer">Answer</string>
     <string name="profile_detail">Detail</string>
     <string name="action_edit">Edit</string>
+    <string name="profile_focus_detail">Read detail in "Topic -> Focus Topic"</string>
 
     <!-- Comment activity -->
     <string name="title_activity_comment">Comment</string>
