--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -158,6 +158,7 @@
     <string name="profile_answer">答过</string>
     <string name="profile_detail">详细信息</string>
     <string name="action_edit">编辑</string>
+    <string name="profile_focus_detail">进入 "话题->我关注的话题" 阅读详情</string>
 
     <!-- Comment activity -->
     <string name="title_activity_comment">评论</string>
