修改了有关post的api，增加编辑草稿时弹出dialog的取消、删除按钮，修改首页话题图片不显示的问题

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -221,4 +221,8 @@
     <!-- Green Channel activity-->
     <string name="title_activity_green_channel">快速注册</string>
 
+    <!--PromptDialog-->
+    <string name="dialog_save">保存</string>
+    <string name="dialog_delete">删除</string>
+    <string name="dialog_cancel">取消</string>
 </resources>
