--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -151,7 +151,7 @@
 
     <!-- Profile activity -->
     <string name="title_activity_profile">个人主页</string>
-    <string name="profile_focus_topic">Ta的话题</string>
+    <string name="profile_focus_topic">Ta关注的话题</string>
     <string name="profile_friend">Ta关注的人</string>
     <string name="profile_fans">关注Ta的人</string>
     <string name="profile_question">问过</string>
@@ -202,8 +202,8 @@
 
     <!--Follows Activity-->
     <string name="title_activity_follows">关注</string>
-    <string name="action_type_following">关注</string>
-    <string name="action_type_followers">被关注</string>
+    <string name="action_type_following">TA关注的人</string>
+    <string name="action_type_followers">关注TA的人</string>
     <string name="default_signature_profile_follows">主人,我也想要一个签名...</string>
 
     <!-- Profile Edit activity -->
@@ -225,4 +225,7 @@
     <string name="dialog_save">保存</string>
     <string name="dialog_delete">删除</string>
     <string name="dialog_cancel">取消</string>
+
+
+    <string name="title_activity_profile_topic">关注的话题</string>
 </resources>
