初步修复掉cookie问题，修复release版本编译错误，

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -236,10 +236,10 @@
     <!-- Green Channel activity-->
     <string name="title_activity_green_channel">Green Channel</string>
     <!--Show Web Image Activity-->
-    <string name="title_activity_show_web_image">图片查看</string>
+    <string name="title_activity_show_web_image" translatable="false">图片查看</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="hello_world" translatable="false">Hello world!</string>
+    <string name="action_settings" translatable="false">Settings</string>
 
     <!--PromptDialog-->
     <string name="dialog_save">Save</string>
