--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,8 @@
     <string name="title_activity_profile_askanswer">ProfileAskanswer</string>
     <string name="action_type_questions">Questions</string>
     <string name="action_type_answers">Answers</string>
+    <string name="action_post_answer_title">Posting..</string>
+    <string name="action_post_answer_content">Posting your answer ,wait a minute</string>
 
     <!-- Welcome activity -->
     <string name="title_activity_welcome">Welcome</string>
