--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="BUG_HD_SDK_GENERAL_KEY" translatable="false">0d377ef5e746db9ac47196038ad6a0c7</string>
     <string name="WENJIN_APPKEY" translatable="false">49f1aa8ae62576f6650e1cba412f22a3</string>
     <string name="YW_APPKEY" translatable="false">23325198</string>
+    <string name="PGY_APPKEY" translatable="false">68f94275352fe3ddc42f5c604a470c94</string>
 
     <string name="network_not_connected">Network is not connected</string>
     <string name="no_more_information">Sorry, no more information</string>
